Fixed overflow of color all the way down to due the height being set 100%

--- a/styles/style1.css
+++ b/styles/style1.css
@@ -2,11 +2,8 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 25%;
     background-color: grey;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
+    overflow: hidden;
 }
 
 li {
